--- a/src/app/alino-app/components/config-section/config-section.module.css
+++ b/src/app/alino-app/components/config-section/config-section.module.css
@@ -26,9 +26,9 @@
 
 @media only screen and (max-width: 850px) {
   .configButton {
-    background-color: transparent;
+    background-color: rgb(225, 225, 225);
   }
   .configButton:hover {
-    background-color: initial;
+    background-color: rgb(225, 225, 225);
   }
 }
