--- a/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
@@ -1,3 +1,19 @@
+.mobileButton {
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  top: 25px;
+  left: 25px;
+  z-index: 100;
+  border: none;
+  background-color: rgb(225, 225, 225);
+  border-radius: 10px;
+  -webkit-tap-highlight-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   width: 25vw;
   min-width: 400px;
