--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family:
-    inter,
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    sans-serif;
+  font-family: inherit;
 }
 
 html,
 body {
   max-width: 100vw;
   /* overflow-x: hidden; */
+  font-family: var(--font-inter), sans-serif;
 }
 
 a {
