--- a/src/pages/home/navbar.module.css
+++ b/src/pages/home/navbar.module.css
@@ -14,17 +14,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 120px;
-  padding-right: 120px;
+  margin: 0px 120px 0px 120px;
 }
 .buttonsDiv {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
   .navbar {
     padding-left: 20px;
     padding-right: 20px;
+    margin: 0px 0px 0px 0px;
   }
 }
