--- a/src/pages/home/header.module.css
+++ b/src/pages/home/header.module.css
@@ -26,9 +26,29 @@
 }
 
 .textContainer {
+  position: relative;
   max-width: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.fxContainer {
+  position: absolute;
+  z-index: -1;
+  left: -250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 500px;
+  mask-image: linear-gradient(to left, white 30%, rgba(255, 255, 255, 0) 80%);
+  -webkit-mask-image: linear-gradient(
+    to left,
+    white 30%,
+    rgba(255, 255, 255, 0) 80%
+  );
+  opacity: 0.7;
 }
 
 .title {
@@ -59,7 +79,7 @@
 }
 
 .image {
-  max-width: 45%;
+  max-width: 40%;
   height: auto;
   border-radius: 10px;
 }
@@ -67,7 +87,7 @@
 /* Responsive styles */
 @media only screen and (max-width: 900px) {
   .header {
-    margin: 0px 20px 0px 20px;
+    margin: 30px 20px 0px 20px;
   }
   .content {
     flex-direction: column;
@@ -80,12 +100,17 @@
     text-align: center;
   }
 
+  .fxContainer {
+    width: 400px;
+    left: -150px;
+  }
+
   .image {
-    max-width: 90%;
+    max-width: 100%;
   }
 
   .title {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .subtitle {
