--- a/src/pages/home/content.module.css
+++ b/src/pages/home/content.module.css
@@ -27,6 +27,9 @@
   max-width: 50%;
 }
 @media only screen and (max-width: 900px) {
+  .contentContainer {
+    margin-top: 0px;
+  }
   .maxWidthContainer {
     /* width: 90%; */
     margin: 30px 20px 100px 20px;
