--- a/src/pages/home/tiles.module.css
+++ b/src/pages/home/tiles.module.css
@@ -1,6 +1,5 @@
 .tilesBox {
   position: relative;
-  padding: 5px;
   height: 100%;
   width: 100%;
   display: flex;
@@ -9,37 +8,10 @@
   background-color: rgb(250, 250, 250);
   border-radius: 20px;
   overflow: hidden;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 5px 20px;
 }
 
-.tilesContainer {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  border-radius: 15px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.textSection {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-size: 1em;
-}
-
-.tilesImg {
-  /*height: 80%;*/
-  width: 65%;
-  min-width: 300px;
-}
-
+.tilesContainer,
 .tilesContainerLeft {
   position: relative;
   height: 100%;
@@ -47,105 +19,95 @@
   border-radius: 15px;
   overflow: hidden;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  flex-direction: row;
-  /* gap: 10px; */
 }
 
+.tilesContainer {
+  justify-content: center;
+  flex-direction: column;
+}
+
+.tilesContainerLeft {
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.textSection,
 .textSectionLeft {
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: start;
   flex-direction: column;
+  justify-content: center;
+}
+
+.textSection {
+  align-items: center;
+  text-align: center;
+}
+
+.textSectionLeft {
+  align-items: start;
   width: 100%;
 }
 
-.textSectionLeft h2,
-.textSection h2 {
+.textSection h2,
+.textSectionLeft h2 {
   font-size: 22px;
 }
 
-.textSectionLeft p,
-.textSection p {
+.textSection p,
+.textSectionLeft p {
   font-size: 16px;
 }
 
+.tilesImg,
 .tilesImgLeft {
-  /*height: 100%;*/
+  object-fit: contain;
+}
+
+.tilesImg {
+  height: 70%;
+  min-width: 300px;
+}
+
+.tilesImgLeft {
   width: 40%;
   min-width: 150px;
 }
 
 @media only screen and (max-width: 900px) {
   .tilesContainer {
-    position: relative;
     height: 135px;
-    width: 100%;
-    border-radius: 15px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: row;
     gap: 10px;
   }
 
   .textSection {
-    height: 100%;
-    display: flex;
-    justify-content: center;
     align-items: start;
-    flex-direction: column;
     width: 100%;
     font-size: 10px;
+    text-align: left;
   }
 
   .tilesImg {
     height: 100%;
-    object-fit: contain;
     min-width: initial;
-  }
-
-  .tilesContainerLeft {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    border-radius: 15px;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    /* gap: 10px; */
-  }
-
-  .textSectionLeft {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
-    width: 100%;
-    font-size: 10px;
   }
 
   .tilesImgLeft {
     height: 100%;
-    object-fit: contain;
     min-width: 130px;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  .textSectionLeft h2,
-  .textSection h2 {
+  .textSection h2,
+  .textSectionLeft h2 {
     font-size: 16px;
   }
 
-  .textSectionLeft p,
-  .textSection p {
+  .textSection p,
+  .textSectionLeft p {
     font-size: 14px;
   }
 }
