--- a/src/components/colorPicker/colorPicker.module.css
+++ b/src/components/colorPicker/colorPicker.module.css
@@ -14,10 +14,10 @@
   max-width: 265px;
   min-width: 265px;
   width: fit-content;
-  height: fit-content;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
+
   gap: 12px;
   padding: 15px 5px 15px 5px;
   z-index: 100;
@@ -30,7 +30,23 @@
     min-height 0.2s ease-in-out;
   overflow: hidden;
 }
+
+.saveTrueContainer {
+  height: 287px;
+  justify-content: space-between;
+}
+
+.saveFalseContainer {
+  height: 241px;
+  justify-content: start;
+}
+
 .titleSection {
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+}
+.titleSectioButtons {
   padding: 0px 15px 0px 15px;
   display: flex;
   gap: 5px;
@@ -199,10 +215,15 @@
 .saveButtonContainer {
   position: relative;
   width: 100%;
-  padding: 0px 15px 0px 15px;
   display: flex;
+  gap: 15px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.saveButtonButtonContainer {
+  width: 100%;
+  padding: 0 10px;
 }
 .saveButton {
   width: 100%;
@@ -239,4 +260,5 @@
 .pickerEmojiContainer {
   width: 100%;
   padding: 0px 15px 0px 15px;
+  overflow: hidden;
 }
