--- a/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
@@ -32,7 +32,7 @@
   height: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
-  padding: 35px 0px 40px 0px;
+  padding: 35px 0px 35px 0px;
   display: flex;
   flex-direction: column;
   gap: 0px;
@@ -40,6 +40,31 @@
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
+}
+
+/* .navbar::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 75px;
+  background: rgba(255, 255, 255, 0.1);
+  top: 0px;
+  overflow: hidden;
+  z-index: 100;
+  mask-image: linear-gradient(rgb(0, 0, 0) 80%, transparent);
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+} */
+
+.navbar::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  top: 55px;
+  overflow: hidden;
+  z-index: 100;
+  background: linear-gradient(rgb(255, 255, 255) 50%, transparent);
 }
 
 .logoContainer {
