--- a/src/components/colorPicker/colorPicker.module.css
+++ b/src/components/colorPicker/colorPicker.module.css
@@ -8,8 +8,7 @@
   right: -215px;
   top: -90px;
   position: absolute;
-  background-color: rgb(255, 255, 255, 0.9);
-  backdrop-filter: blur(5px);
+  background-color: rgb(255, 255, 255);
   border: 1px solid rgb(240, 240, 240);
   max-width: 265px;
   min-width: 265px;
@@ -17,7 +16,6 @@
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-
   gap: 12px;
   padding: 15px 5px 15px 5px;
   z-index: 100;
