--- a/src/components/modalBox/modalBox/modalBox.module.css
+++ b/src/components/modalBox/modalBox/modalBox.module.css
@@ -1,8 +1,6 @@
 .container {
   position: absolute;
-  background-color: rgb(255, 255, 255, 0.9);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
+  background-color: rgb(255, 255, 255);
   border: 1px solid rgb(240, 240, 240);
   width: -moz-fit-content;
   width: fit-content;
