--- a/src/app/alino-app/components/navbar/moreConfigs/moreConfigs.module.css
+++ b/src/app/alino-app/components/navbar/moreConfigs/moreConfigs.module.css
@@ -20,8 +20,7 @@
 .container {
   right: -150px;
   position: absolute;
-  background-color: rgb(255, 255, 255, 0.8);
-  backdrop-filter: blur(5px);
+  background-color: rgb(255, 255, 255);
   border: 1px solid rgb(240, 240, 240);
   max-width: fit-content;
   min-width: 150px;
