--- a/src/app/alino-app/components/navbar/navbarDesktop/listCard.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/listCard.module.css
@@ -83,14 +83,16 @@
   right: 10px;
   background-color: transparent;
   transition: opacity 0.2s ease-in-out;
-  width: 25px;
-  height: 25px;
+  width: 23px;
+  height: 23px;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 0;
   color: rgb(210, 210, 210);
   font-size: 12px;
+  border-radius: 5px;
+  background-color: rgb(250, 250, 250);
 }
 
 .checkButton {
@@ -106,4 +108,14 @@
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.2s ease-in-out;
+}
+
+.pinContainer {
+  position: absolute;
+  right: 35px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
