--- a/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
@@ -92,6 +92,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  list-style-type: none;
 }
 
 @media only screen and (max-width: 850px) {
