add user avatar in config

--- a/src/app/alino-app/components/config-section/config-section.module.css
+++ b/src/app/alino-app/components/config-section/config-section.module.css
@@ -19,6 +19,8 @@
   transition: background-color 0.2s;
   background-color: rgb(235, 235, 235);
   -webkit-tap-highlight-color: transparent;
+  overflow: hidden;
+  padding: 2px;
 }
 .configButton:hover {
   background-color: #e6e6e6;
