--- a/src/app/alino-app/components/todo/todo.module.css
+++ b/src/app/alino-app/components/todo/todo.module.css
@@ -8,6 +8,7 @@
   padding: 25px 25px 25px 0px;
 }
 .todoContainer {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -18,6 +19,7 @@
   max-width: 600px;
 }
 .titleContainer {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: start;
