add sync status

--- a/src/app/alino-app/components/config-section/config-section.module.css
+++ b/src/app/alino-app/components/config-section/config-section.module.css
@@ -21,6 +21,7 @@
   -webkit-tap-highlight-color: transparent;
   overflow: hidden;
   padding: 2px;
+  z-index: 1;
 }
 .configButton:hover {
   background-color: #e6e6e6;
