--- a/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
@@ -16,12 +16,12 @@
 
 .container {
   width: 25vw;
-  min-width: 400px;
+  min-width: 350px;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 25px;
+  /* padding: 25px; */
   z-index: 100;
 }
 
@@ -66,6 +66,16 @@
   z-index: 100;
   background: linear-gradient(rgb(255, 255, 255) 50%, transparent);
 }
+.navbar::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  bottom: 80px;
+  overflow: hidden;
+  z-index: 100;
+  background: linear-gradient(transparent, rgb(255, 255, 255) 50%);
+}
 
 .logoContainer {
   width: 100%;
@@ -81,8 +91,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
-  padding: 30px 40px 0px 40px;
+  overflow-y: auto;
+  padding: 30px 30px 30px 30px;
 }
 
 .cardsSection::-webkit-scrollbar {
@@ -94,6 +104,11 @@
   flex-direction: column;
   gap: 5px;
   list-style-type: none;
+}
+
+.inputContainer {
+  position: relative;
+  padding: 0 30px;
 }
 
 @media only screen and (max-width: 850px) {
