--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@ body {
   max-width: 100vw;
   /* overflow-x: hidden; */
   font-family: var(--font-inter), sans-serif;
+  -webkit-overflow-scrolling: touch !important;
+  overflow: auto !important;
 }
 
 a {
