--- a/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
@@ -91,7 +91,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  overflow: auto;
   padding: 30px 30px 30px 30px;
 }
 
@@ -103,7 +103,6 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  list-style-type: none;
 }
 
 .inputContainer {
