--- a/src/app/alino-app/components/navbar/navbarDesktop/listCard.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/listCard.module.css
@@ -2,7 +2,7 @@
   /* ex subjectsCardsContainer*/
   position: relative;
   overflow: hidden;
-  background-color: rgb(250, 250, 250);
+  /* background-color: rgb(250, 250, 250); */
   border-radius: 15px;
   height: 45px;
   width: 100%;
