--- a/src/app/alino-app/components/navbar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar/navbar.module.css
@@ -127,6 +127,9 @@
     left: initial;
   }
   .cardsSection {
-    padding: 30px 15px 0px 15px;
+    padding: 30px 15px 15px 15px;
+  }
+  .inputContainer {
+    padding: 0 15px;
   }
 }
