--- a/src/app/alino-app/components/accountConfigSection/accountConfigSection.module.css
+++ b/src/app/alino-app/components/accountConfigSection/accountConfigSection.module.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 30px;
 }
 
 .separator {
@@ -13,36 +13,8 @@
   opacity: 0.5;
 }
 
-.navbar {
-  width: 30%;
-  height: 100%;
-  padding: 10px 0px 10px 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  gap: 5px;
-}
-
-.option {
-  width: 100%;
-  height: fit-content;
-  border-radius: 10px;
-  padding: 5px 10px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  border: none;
-  cursor: pointer;
-}
-
-.optionText {
-  font-size: 16px;
-  color: #1c1c1c;
-}
-
 .section1 {
-  width: 100%;
+  /* width: 100%; */
   height: fit-content;
   display: flex;
   flex-direction: row;
@@ -57,4 +29,11 @@
   height: 50px;
   border-radius: 100%;
   border: 2px solid rgb(220, 220, 220);
+}
+
+@media only screen and (max-width: 850px) {
+  .body {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
