--- a/src/app/alino-app/components/navbar/listCard/listCard.module.css
+++ b/src/app/alino-app/components/navbar/listCard/listCard.module.css
@@ -10,7 +10,7 @@
   justify-content: start;
   align-items: center;
   padding: 0px 40px 0px 10px;
-  gap: 10px;
+  gap: 5px;
   transition:
     background-color 0.2s ease-in-out,
     scale 0.2s ease-in-out,
@@ -31,11 +31,11 @@
   z-index: 0;
 }
 
-.identifierContainer {
-  width: 16px;
+.colorPickerMotion {
+  position: relative;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  gap: 3px;
 }
 
 .listName {
@@ -95,6 +95,46 @@
   background-color: rgb(250, 250, 250);
 }
 
+.containerButtonsMobile {
+  position: absolute;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  gap: 5px;
+}
+
+.buttonMobile {
+  position: relative;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.counterMobile {
+  position: relative;
+  background-color: transparent;
+  transition: opacity 0.2s ease-in-out;
+  width: 23px;
+  height: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+  color: rgb(210, 210, 210);
+  font-size: 12px;
+  border-radius: 5px;
+  background-color: rgb(250, 250, 250);
+}
+
 .checkButton {
   position: absolute;
   width: 25px;
@@ -112,7 +152,6 @@
 
 .pinContainer {
   position: absolute;
-  right: 35px;
   width: 23px;
   height: 23px;
   display: flex;
