--- a/src/app/alino-app/components/navbar/moreConfigs/moreConfigs.module.css
+++ b/src/app/alino-app/components/navbar/moreConfigs/moreConfigs.module.css
@@ -24,14 +24,16 @@
   border: 1px solid rgb(240, 240, 240);
   max-width: fit-content;
   min-width: 150px;
-  min-height: 96px;
+  min-height: 133px;
   width: fit-content;
   height: fit-content;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 10px 10px 10px 10px;
+  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   z-index: 100;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
@@ -50,7 +52,6 @@
   height: 1px;
   background-color: rgb(240, 240, 240);
 }
-
 .optionsContainer {
   display: flex;
   justify-content: center;
