--- a/src/components/colorPicker/colorPicker.module.css
+++ b/src/components/colorPicker/colorPicker.module.css
@@ -64,17 +64,20 @@
     color 0.2s ease-in-out;
 }
 .mainButton {
-  width: 20px;
-  height: 20px;
+  width: fit-content;
+  height: fit-content;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   background-color: transparent;
   transition: scale 0.2s ease-in-out;
+  padding: 5px 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
 }
-.mainButton:hover {
-  scale: 1.2;
-}
+
 .separator {
   width: 100%;
   height: 1px;
