--- a/src/components/windowComponent/window-component.module.css
+++ b/src/components/windowComponent/window-component.module.css
@@ -1,7 +1,9 @@
 .container {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgb(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
@@ -16,7 +18,8 @@
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
-  width: 600px;
+  width: 50%;
+  min-width: 300px;
   height: 450px;
   display: flex;
   justify-content: start;
@@ -62,4 +65,15 @@
 .body {
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (max-width: 850px) {
+  .window {
+    width: 90%;
+    min-width: none;
+    height: 80%;
+  }
+  .header {
+    height: 15%;
+  }
 }
