--- a/src/app/alino-app/components/navbar/listCard/listCard.module.css
+++ b/src/app/alino-app/components/navbar/listCard/listCard.module.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 0px 40px 0px 10px;
+  padding: 7px 40px 7px 10px;
   gap: 5px;
   transition:
     background-color 0.2s ease-in-out,
@@ -26,7 +26,7 @@
   height: 200px;
   position: absolute;
   left: -200px;
-  opacity: 0.1;
+  opacity: 0.05;
   transition: box-shadow 0.2s ease-in-out;
   z-index: 0;
 }
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: row;
   gap: 3px;
+  height: 100%;
 }
 
 .listName {
