--- a/src/app/alino-app/components/accountConfigSection/accountConfigSection.module.css
+++ b/src/app/alino-app/components/accountConfigSection/accountConfigSection.module.css
@@ -6,34 +6,54 @@
   gap: 30px;
 }
 
-.separator {
-  width: 2px;
-  height: 100%;
-  background-color: rgb(220, 220, 220);
-  opacity: 0.5;
+.sectionContainer {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 5px;
 }
 
-.section1 {
-  /* width: 100%; */
-  height: fit-content;
+.sectionTitle {
+  font-size: 12px;
+  color: rgb(150, 150, 150);
+  padding: 0 15px;
+}
+
+.configSection {
+  position: relative;
+  background-color: rgb(250, 250, 250);
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  padding-left: 10px;
+  gap: 10px;
+  border-radius: 10px;
+  padding: 10px 15px;
+  width: 100%;
 }
 
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  border: 2px solid rgb(220, 220, 220);
+.configSectionTitle {
+  font-size: 14px;
+  color: #1c1c1c;
+}
+
+.configSectionDescription {
+  font-size: 12px;
+  color: rgb(150, 150, 150);
+  padding: 0 15px;
+}
+
+.switchSection {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 850px) {
   .body {
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   }
 }
