--- a/src/app/alino-app/components/accountConfigSection/accountConfigSection.module.css
+++ b/src/app/alino-app/components/accountConfigSection/accountConfigSection.module.css
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: row;
   gap: 30px;
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
 }
 
 .sectionContainer {
