--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
   font-family: inherit;
 }
 
+html {
+  min-height: calc(100% + env(safe-area-inset-top));
+  /* padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left); */
+}
+
 html,
 body {
   max-width: 100vw;
