--- a/src/components/window-component/window-component.module.css
+++ b/src/components/window-component/window-component.module.css
@@ -61,6 +61,7 @@
   cursor: pointer;
   width: fit-content;
   height: fit-content;
+  -webkit-tap-highlight-color: "transparent";
 }
 .body {
   width: 100%;
