Actualizar globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  min-height: calc(100% + env(safe-area-inset-top));
+  /*min-height: calc(100% + env(safe-area-inset-top));*/
 }
 
 html,
