--- a/src/app/alino-app/components/blurredFx/blurredFx.module.css
+++ b/src/app/alino-app/components/blurredFx/blurredFx.module.css
@@ -16,3 +16,9 @@
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 850px) and (display-mode: standalone) {
+  .blurred {
+    opacity: 1;
+  }
+}
