--- a/src/app/alino-app/components/config-section/ConfigSection.module.css
+++ b/src/app/alino-app/components/config-section/ConfigSection.module.css
@@ -1,13 +1,14 @@
 .configSection {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 2000;
   user-select: none;
 }
+
 .configButton {
   width: 40px;
   height: 40px;
