--- a/src/app/alino-app/components/navbar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar/navbar.module.css
@@ -2,8 +2,8 @@
   position: absolute;
   width: 40px;
   height: 40px;
-  top: 15px;
-  left: 15px;
+  top: 0;
+  left: 0;
   z-index: 100;
   border: none;
   background-color: rgb(225, 225, 225);
@@ -117,11 +117,11 @@
   .container {
     position: absolute;
     width: 75%;
+    height: 100%;
     min-width: inherit;
-    height: calc(100% - 30px);
     left: -100%;
     transition: left 0.2s ease-in-out;
-    padding: 0px 0 0px 15px;
+    /* padding: 0px 0 0px 15px; */
   }
   .active {
     left: initial;
