--- a/src/app/alino-app/layout.module.css
+++ b/src/app/alino-app/layout.module.css
@@ -1,4 +1,20 @@
 .app {
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left);
+  height: 100svh;
+  position: relative;
+  background-color: rgb(240, 240, 240);
+  width: 100vw;
+  padding: 15px;
+  overflow: hidden;
+}
+.appContainer {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+@media all and (display-mode: standalone) {
+  .app {
+    height: 100vh;
+    padding: env(safe-area-inset-top) 15px 15px 15px;
+  }
 }
