--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,10 @@
   font-family: inherit;
 }
 
-html {
-  min-height: calc(100% + env(safe-area-inset-top));
-}
-
 html,
 body {
   max-width: 100vw;
-  /* overflow-x: hidden; */
+  height: 100%;
   font-family: var(--font-inter), sans-serif;
 }
 
