--- a/src/components/window-component/window-component.module.css
+++ b/src/components/window-component/window-component.module.css
@@ -78,3 +78,12 @@
     height: 15%;
   }
 }
+
+@media only screen and (max-width: 850px) and (display-mode: standalone) {
+  .container {
+    height: 100vh;
+  }
+  .window {
+    height: 70%;
+  }
+}
