--- a/src/components/confirmation-modal/ConfirmationModal.module.css
+++ b/src/components/confirmation-modal/ConfirmationModal.module.css
@@ -62,3 +62,9 @@
   border-radius: 10px;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 850px) and (display-mode: standalone) {
+  .backgroundModal {
+    height: 100vh;
+  }
+}
