--- a/src/app/alino-app/layout.module.css
+++ b/src/app/alino-app/layout.module.css
@@ -15,6 +15,6 @@
 @media all and (display-mode: standalone) {
   .app {
     height: 100vh;
-    padding: env(safe-area-inset-top) 15px 15px 15px;
+    padding: calc(env(safe-area-inset-top) + 15px) 15px 15px 15px;
   }
 }
