--- a/src/components/window-component/window-component.module.css
+++ b/src/components/window-component/window-component.module.css
@@ -4,12 +4,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 100;
 }
+
 .window {
   position: relative;
   background-color: #fff;
@@ -61,7 +61,7 @@
   cursor: pointer;
   width: fit-content;
   height: fit-content;
-  -webkit-tap-highlight-color: "transparent";
+  -webkit-tap-highlight-color: transparent;
 }
 .body {
   width: 100%;
