--- a/src/components/wpa-download-modal/WpaDownloadModal.module.css
+++ b/src/components/wpa-download-modal/WpaDownloadModal.module.css
@@ -9,21 +9,79 @@
   position: absolute;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
   width: 100%;
   height: fit-content;
   background-color: rgba(255, 255, 255, 0.9);
   bottom: 0;
-  border-radius: 50px 50px 0px 0px;
+  border-radius: 40px 40px 0px 0px;
   backdrop-filter: blur(10px) saturate(200%);
+  -webkit-backdrop-filter: blur(10px) saturate(200%);
   border: solid 1px rgb(240, 240, 240);
-  padding: 40px;
+  padding: 35px;
+}
+
+.dragBar {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.05);
+  width: 35%;
+  height: 5px;
+  border-radius: 3px;
+  top: 10px;
+}
+
+.iconSection {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.alinoIcon {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.alinoIcon::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.glow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%; /* Para el efecto circular */
+  z-index: -1; /* Que quede detrás del ícono */
+  background: conic-gradient(
+    from 0deg,
+    #ffb6c1,
+    #ffc3a0,
+    #ffde91,
+    #e1f0b0,
+    #a4f1ce,
+    #a4dbf1,
+    #b3b5f1,
+    #e2a5ff,
+    #ffb6c1
+  );
+  filter: blur(15px);
 }
 
 .textSection {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  width: 100%;
 }
 
 .textSection h2 {
@@ -38,4 +96,5 @@
 
 .buttonSection {
   height: fit-content;
+  width: 100%;
 }
