--- a/src/pages/home/faq.module.css
+++ b/src/pages/home/faq.module.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 100px;
 }
 
 .container {
@@ -37,14 +38,14 @@
   width: fit-content;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 850px) {
+  .section {
+    margin-top: 50px;
+  }
   .container {
     margin: 0px 20px 0px 20px;
     padding: 30px 20px 30px 20px;
   }
-}
-
-@media only screen and (max-width: 700px) {
   .title {
     font-size: 30px;
   }
