--- a/src/app/(auth)/(access)/auth.module.css
+++ b/src/app/(auth)/(access)/auth.module.css
@@ -1,4 +1,4 @@
-.main {
+.layout {
   position: relative;
   width: 100vw;
   height: 100svh;
@@ -6,56 +6,60 @@
   justify-content: center;
   align-items: center;
   touch-action: none;
+  background-repeat: repeat;
+  background-position: top left;
+  background-size: 200px;
 }
 
-.container {
+.contentContainer {
   position: relative;
   width: 100%;
   height: 100%;
   max-width: 1366px;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
 }
 
-.backButton {
+.backLinkContainer {
   position: absolute;
   top: 20px;
   left: 120px;
-  display: flex;
   width: fit-content;
   height: fit-content;
 }
 
-.form {
+.authForm {
   position: relative;
   min-width: 400px;
   max-width: 400px;
   background-color: rgb(240, 240, 240);
-  padding: 40px 30px 40px 30px;
+  padding: 40px 30px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
 }
 
 @media (max-width: 640px) {
-  .container {
-    padding: 0px 20px 0px 20px;
+  .contentContainer {
+    padding: 0 20px;
   }
-  .form {
+
+  .authForm {
+    width: 100%;
     min-width: initial;
     max-width: initial;
-    width: 100%;
   }
-  .backButton {
+
+  .backLinkContainer {
     left: 20px;
   }
 }
 
 @media only screen and (max-width: 850px) and (display-mode: standalone) {
-  .backButton {
+  .backLinkContainer {
     display: none;
   }
 }
