--- a/src/components/ui/loader/loader.module.css
+++ b/src/components/ui/loader/loader.module.css
@@ -2,13 +2,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100svw;
+  height: 100svh;
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 10000;
+  user-select: none;
 }
 
 .icon {
