--- a/src/app/alino-app/components/navbar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/navbar/list-card/ListCard.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 7px 10px 7px 15px;
+  padding: 7px 10px 7px 10px;
   gap: 5px;
   transition:
     background-color 0.2s ease-in-out,
@@ -69,7 +69,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  background-color: rgba(0, 0, 0, 0.05);
+  /* background-color: rgba(0, 0, 0, 0.05); */
   border-radius: 10px;
   padding-left: 5px;
 }
@@ -135,7 +135,7 @@
   justify-content: center;
   align-items: center;
   color: rgb(210, 210, 210);
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .Desktop {
