--- a/src/app/alino-app/components/navbar/list-input/ListInput.module.css
+++ b/src/app/alino-app/components/navbar/list-input/ListInput.module.css
@@ -6,24 +6,29 @@
   background-color: rgb(240, 240, 240);
   border-radius: 15px;
   padding: 7px 10px 7px 10px;
-  gap: 10px;
+  gap: 5px;
   height: 45px;
 }
+
 .colorPickerContainer {
   position: relative;
   display: flex;
   height: 100%;
 }
+
 .inputText {
   width: 100%;
-  height: 45px;
+  height: 100%;
   border: none;
   outline: none;
   background-color: transparent;
   font-size: 14px;
   font-family: inherit;
   color: #1c1c1c;
+  border-radius: 10px;
+  padding-left: 5px;
 }
+
 .colorButton {
   width: 20px;
   height: 20px;
