--- a/src/app/alino-app/components/navbar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/navbar/list-card/ListCard.module.css
@@ -69,7 +69,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  /* background-color: rgba(0, 0, 0, 0.05); */
+  background-color: #0000000d;
   border-radius: 10px;
   padding-left: 5px;
 }
