--- a/src/app/alino-app/components/navbar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar/navbar.module.css
@@ -120,8 +120,8 @@
     height: 100%;
     min-width: inherit;
     left: 0;
-    transform: translateX(0);
-    transition: transform 0.2s ease-in-out;
+    /* transform: translateX(-150); */
+    /* transition: transform 0.2s ease-in-out; */
     /* padding: 0px 0 0px 15px; */
   }
   .active {
