--- a/src/app/(auth)/(access)/auth.module.css
+++ b/src/app/(auth)/(access)/auth.module.css
@@ -9,6 +9,7 @@
   background-repeat: repeat;
   background-position: top left;
   background-size: 200px;
+  background-color: #fff;
 }
 
 .contentContainer {
