--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -12,7 +12,7 @@
 .section1 {
   position: absolute;
   width: 100%;
-  height: 22vh;
+  height: 150px;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -27,12 +27,69 @@
   position: absolute;
   left: 0;
   bottom: -20px;
-  height: calc(22vh + 20px);
+  height: calc(150px + 20px);
+  min-height: 170px;
   width: 100%;
   mask-image: linear-gradient(rgb(0, 0, 0) 85%, transparent);
-  backdrop-filter: blur(10px) saturate(50%);
-  z-index: 0;
+  backdrop-filter: blur(10px);
+  z-index: 25;
 }
+
+/* ///////HOME////// */
+
+.homeContainer {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  max-width: 600px;
+  z-index: 26;
+}
+
+.homeSubContainer {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: fit-content;
+  gap: 5px;
+}
+
+.homeTitle {
+  position: relative;
+  font-size: 30px;
+  font-weight: 900;
+  background: -webkit-linear-gradient(
+    45deg,
+    rgb(173, 243, 255) 0%,
+    rgb(106, 195, 255)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  display: inline-block;
+  width: fit-content;
+  user-select: none;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+}
+
+.homeTimeContainer {
+  font-size: 14px;
+  color: rgb(200, 200, 200);
+  user-select: none;
+  text-align: start;
+}
+
+/* //////////////// */
 
 .titleSection {
   display: flex;
@@ -41,7 +98,7 @@
   flex-direction: row;
   gap: 5px;
   width: 100%;
-  z-index: 50;
+  z-index: 25;
 }
 
 .listTitle {
@@ -55,7 +112,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 40;
+  z-index: 25;
 }
 
 .section2 {
@@ -73,12 +130,13 @@
 .tasksSection {
   width: 100%;
   overflow-y: auto;
+  overscroll-behavior: contain;
   height: 100%;
   scrollbar-width: none;
   display: flex;
   justify-content: center;
   align-items: start;
-  padding-top: 22vh;
+  padding-top: 150px;
 }
 
 .tasksSection::-webkit-scrollbar {
@@ -100,5 +158,17 @@
 @media only screen and (max-width: 850px) {
   .tasks {
     width: 90%;
+  }
+
+  .section1 {
+    height: 200px;
+  }
+
+  .section1::before {
+    height: calc(200px + 20px);
+  }
+
+  .tasksSection {
+    padding-top: 200px;
   }
 }
