--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -7,11 +7,7 @@
   justify-content: center;
   align-items: center;
 }
-.statusButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .formContainer {
   width: 100%;
   height: fit-content;
@@ -19,26 +15,25 @@
   justify-content: center;
   align-items: center;
 }
+
 .form {
   width: 100%;
   height: 50px;
   display: flex;
   justify-content: start;
-  gap: 15px;
   align-items: center;
   border-radius: 15px 15px 15px 15px;
   background-color: #ffffff;
-  padding: 0px 20px 0px 20px;
-}
-.input {
-  width: 100%;
-  border: none;
-  color: #1c1c1c;
-  outline: none;
+  overflow: hidden;
 }
 
-@media (max-width: 850px) {
-  .form {
-    width: 100%;
-  }
+.input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  padding: 0px 20px 0px 20px;
+  font-size: 14px;
+  font-family: inherit;
+  color: #1c1c1c;
 }
