--- a/src/app/alino-app/page.module.css
+++ b/src/app/alino-app/page.module.css
@@ -1,14 +1,15 @@
 .container {
-  position: relative;
   width: 100%;
   height: 100%;
-  padding: 25px 25px 25px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 25px 25px 25px;
 }
 
 @media only screen and (max-width: 850px) {
   .container {
-    justify-content: start;
-    align-items: center;
-    padding: 25px 0px 0px 0px;
+    padding: 0px;
   }
 }
