--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,21 @@
 
 html,
 body {
+  position: relative;
   max-width: 100vw;
   height: 100%;
   font-family: var(--font-inter), sans-serif;
+  background-color: #f0f0f0;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@media all and (display-mode: standalone) {
+  html,
+  body {
+    height: 100vh;
+  }
 }
