--- a/src/app/alino-app/components/navbar/list-input/ListInput.module.css
+++ b/src/app/alino-app/components/navbar/list-input/ListInput.module.css
@@ -66,6 +66,7 @@
   border-radius: 5px;
   border: none;
 }
+
 .button {
   width: 100%;
   height: 45px;
@@ -73,8 +74,13 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: transparent;
+}
+
+.button:hover {
+  background-color: rgb(250, 250, 250);
 }
