--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -22,9 +22,10 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 15px;
   background-color: #ffffff;
   overflow: hidden;
+  padding: 0px 20px 0px 0px;
 }
 
 .input {
@@ -32,7 +33,7 @@
   height: 100%;
   border: none;
   outline: none;
-  padding: 0px 20px 0px 20px;
+  padding-left: 20px;
   font-size: 14px;
   font-family: inherit;
   color: #1c1c1c;
