--- a/src/components/ui/calendar/Calendar.module.css
+++ b/src/components/ui/calendar/Calendar.module.css
@@ -1,36 +1,21 @@
-.fit {
-  position: relative;
-  display: flex;
-  height: fit-content;
-  width: fit-content;
-}
-
-.mainButton {
-  width: 20px;
-  height: 20px;
-  border: none;
+.button {
   border-radius: 5px;
+  border: none;
+  background-color: rgb(250, 250, 250);
+  padding: 5px;
   cursor: pointer;
-  background-color: transparent;
-  transition: scale 0.2s ease-in-out;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   transition: background-color 0.3s ease-in-out;
 }
 
-.mainButton:hover {
+.button:hover {
   background-color: rgb(240, 240, 240) !important;
 }
 
 .container {
-  right: -150px;
   position: absolute;
-  background-color: #fff;
+  background-color: #ffffff;
   border: 1px solid rgb(240, 240, 240);
-  min-width: 150px;
   width: fit-content;
-  /* height: fit-content; */
   min-height: fit-content;
   border-radius: 15px;
   display: inline-flex;
@@ -44,18 +29,6 @@
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
 }
 
-.titleSection {
-  color: rgb(200, 200, 200);
-  font-size: 12px;
-  font-weight: 500;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-.separator {
-  width: 100%;
-  height: 1px;
-  background-color: rgb(240, 240, 240);
-}
 .optionsContainer {
   display: flex;
   justify-content: center;
