fix send update task button

--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -62,7 +62,7 @@
 
 .checkButton {
   position: relative;
-  width: 100%;
+  width: 23px;
   height: auto;
   border: none;
   background-color: transparent;
