--- a/src/app/alino-app/components/todo/todo.module.css
+++ b/src/app/alino-app/components/todo/todo.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 25px 25px 25px 25px;
+  /* padding: 25px 25px 25px 25px; */
 }
 
 @media (max-width: 850px) {
