--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@ body {
   height: 100%;
   font-family: var(--font-inter), sans-serif;
   /* background-color: #f0f0f0; */
+  perspective: 1000px;
 }
 
 a {
