--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -17,26 +17,61 @@
 }
 
 .form {
+  position: relative;
   width: 100%;
-  height: 50px;
+  min-height: 50px;
+  height: fit-content;
   display: flex;
   justify-content: start;
   align-items: center;
   border-radius: 15px;
   background-color: #ffffff;
+  /* overflow: hidden; */
+  padding: 0px 15px 0px 15px;
+  box-shadow:
+    0 4px 12px #0c144205,
+    0 30px 80px #0c144214,
+    inset 0 0 #e6e9ed;
+  transition: height 0.3s ease-in-out;
+}
+
+.inputContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
   overflow: hidden;
-  padding: 0px 20px 0px 0px;
+  min-height: 0px;
+  margin-top: 10px;
+  /* margin-bottom: 11px; */
 }
 
 .input {
-  width: 100%;
-  height: 100%;
   border: none;
   outline: none;
-  padding-left: 20px;
+
   font-size: 14px;
   font-family: inherit;
   color: #1c1c1c;
+  resize: none;
+  overflow: hidden;
+  /* white-space: pre-wrap; */
+  /* word-break: break-word; */
+  /* box-sizing: border-box; */
+  /* background-color: yellow; */
+  padding: 5px 10px;
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  /* background-color: yellow; */
 }
 
 .limitIndicator {
@@ -73,6 +108,7 @@
   width: 30px;
   height: 30px;
   border-radius: 5px;
+  cursor: pointer;
   -webkit-tap-highlight-color: transparent;
 }
 
