--- a/src/components/ui/dropdown/Dropdown.module.css
+++ b/src/components/ui/dropdown/Dropdown.module.css
@@ -13,14 +13,14 @@
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .triggerButton:hover {
-  background-color: #0056b3;
+  background-color: rgb(240, 240, 240) !important;
 }
 
 .dropdownMenu {
