--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -26,11 +26,13 @@
 .section1::before {
   content: "";
   position: absolute;
-  left: 0;
+  left: -20px;
   bottom: -20px;
-  height: calc(180px + 20px);
-  min-height: 200px;
-  width: 100%;
+  /* height: calc(180px + 20px); */
+  /* min-height: 200px; */
+  height: calc(150% + 20px);
+  /* height: calc(100% + 20px); */
+  width: calc(100% + 40px);
   mask-image: linear-gradient(rgb(0, 0, 0) 85%, transparent);
   backdrop-filter: blur(10px);
   z-index: 25;
@@ -163,7 +165,7 @@
 .tasks {
   position: relative;
   height: 100%;
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -173,17 +175,9 @@
 }
 
 @media only screen and (max-width: 850px) {
-  .tasks {
-    width: 90%;
-  }
-
   .section1 {
     /* height: 220px; */
     top: 80px;
-  }
-
-  .section1::before {
-    height: calc(220px + 20px);
   }
 
   .tasksSection {
