--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -4,22 +4,23 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  gap: 30px;
   width: 100%;
   height: 100%;
-  gap: 30px;
 }
 
 .section1 {
   position: absolute;
-  top: 40px;
-  width: 100%;
-  height: fit-content;
   display: flex;
+  flex-direction: column;
   justify-content: end;
   align-items: center;
-  max-width: 600px;
-  flex-direction: column;
   gap: 15px;
+  width: 100%;
+  max-width: 600px;
+  height: fit-content;
+  top: 0px;
+  padding-top: 40px;
   z-index: 10;
 }
 
@@ -28,14 +29,12 @@
   position: absolute;
   left: -20px;
   bottom: -20px;
-  /* height: calc(180px + 20px); */
-  /* min-height: 200px; */
-  height: calc(150% + 40px);
-  /* height: calc(100% + 20px); */
+  height: calc(100% + 20px);
   width: calc(100% + 40px);
   mask-image: linear-gradient(rgb(0, 0, 0) 85%, transparent);
   backdrop-filter: blur(10px);
   z-index: 25;
+  background-color: rgba(240, 240, 240, 0.5);
 }
 
 .header {
@@ -173,7 +172,7 @@
   display: flex;
   justify-content: center;
   align-items: start;
-  padding-top: 180px;
+  /* padding-top: 180px; */
 }
 
 .tasksSection::-webkit-scrollbar {
@@ -194,11 +193,10 @@
 
 @media only screen and (max-width: 850px) {
   .section1 {
-    /* height: 220px; */
-    top: 80px;
+    padding-top: 80px;
   }
 
   .tasksSection {
-    padding-top: 220px;
+    /* padding-top: 220px; */
   }
 }
