--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: start;
   align-items: start;
-  padding: 5px 15px 5px 15px;
+  padding: 10px 15px 10px 15px;
   gap: 5px;
 }
 
@@ -39,6 +39,7 @@
   white-space: pre-wrap;
   word-break: break-word;
   height: auto;
+  height: 100%;
   box-sizing: border-box;
 }
 
@@ -62,11 +63,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5px;
 }
 
 .checkButton {
   position: relative;
-  width: 23px;
+  width: 25px;
   height: auto;
   border: none;
   background-color: transparent;
@@ -87,13 +89,4 @@
   border: none;
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
-}
-
-.configTaskSection {
-  position: relative;
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
 }
