--- a/src/app/alino-app/components/navbar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar/navbar.module.css
@@ -31,7 +31,7 @@
   width: 100%;
   max-width: 1366px;
   height: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--background-container);
   border-radius: 20px;
   padding: 35px 0px 35px 0px;
   display: flex;
@@ -51,7 +51,7 @@
   top: 55px;
   overflow: hidden;
   z-index: 100;
-  background: linear-gradient(rgb(255, 255, 255) 50%, transparent);
+  background: linear-gradient(var(--background-container) 50%, transparent);
 }
 
 .navbar::after {
@@ -62,7 +62,7 @@
   bottom: 80px;
   overflow: hidden;
   z-index: 100;
-  background: linear-gradient(transparent, rgb(255, 255, 255) 50%);
+  background: linear-gradient(transparent, var(--background-container) 50%);
 }
 
 .logoContainer {
